--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <section class="header">
       <nav>
-        <a href="index.html"><img src="eduford_img/logo.png" /></a>
+        <a href="index.html"><img src="logo.png" /></a>
         <div class="nav-links" id="navlinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
